Adding in pre/post script tracking in configs