@@ -11,13 +11,18 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
+import org.luaj.vm2.LuaValue;
+import org.luaj.vm2.lib.ZeroArgFunction;
 import org.yaml.snakeyaml.Yaml;
+
 import redactedrice.ptcgr.constants.PtcgRandomizerVersion;
 import redactedrice.ptcgr.randomizer.Settings;
 import redactedrice.ptcgr.randomizer.actions.ActionBank;
+import redactedrice.randomizer.lua.Module;
 
 class PresetIOTest {
     @TempDir
@@ -37,6 +42,8 @@ class PresetIOTest {
                 appVersion: %s
                 seed: 7
                 actions: []
+                prescripts: []
+                postscripts: []
                 """.formatted(PtcgRandomizerVersion.VERSION);
         Path presetFile = tempDir.resolve("ptcgr_configs.yaml");
         Files.writeString(presetFile, yaml);
@@ -56,22 +63,27 @@ class PresetIOTest {
     }
 
     @Test
-    void presetDocumentIncludesAppVersionSeedAndActions() {
-        Preset preset = new Preset("123456789", Collections.emptyList());
+    void presetDocumentIncludesAppVersionSeedActionsAndScripts() {
+        Preset preset = new Preset("123456789", Collections.emptyList(), List.of(), List.of());
         Map<String, Object> document = preset.prepForSave();
         assertEquals(Preset.CURRENT_FORMAT_VERSION, document.get("version"));
         assertEquals(PtcgRandomizerVersion.VERSION, document.get("appVersion"));
         assertEquals("123456789", document.get("seed"));
         assertEquals(Collections.emptyList(), document.get("actions"));
+        assertEquals(Collections.emptyList(), document.get("prescripts"));
+        assertEquals(Collections.emptyList(), document.get("postscripts"));
         assertFalse(document.containsKey("randomizationSettings"));
     }
 
     @Test
-    void saveWritesResolvedSeedAndAppVersion() throws Exception {
+    void saveWritesResolvedSeedAppVersionAndScripts() throws Exception {
         Settings settings = new Settings();
         settings.setSeed("random");
 
-        Preset preset = Preset.fromAppState(settings.getSeedString(), List.of());
+        var setupScript = scriptWithVersion("changedetector_setup", "0.1", "randomize");
+        var detectScript = scriptWithVersion("changedetector_detect", "0.1", "module");
+        Preset preset = Preset.fromAppState(settings.getSeedString(), List.of(),
+                testActionBank(null, null, List.of(setupScript), List.of(detectScript)));
         Path output = tempDir.resolve("preset.yaml");
         PresetIO.save(output.toFile(), preset);
 
@@ -79,11 +91,23 @@ class PresetIOTest {
         Map<String, Object> loaded = new Yaml().load(Files.readString(output));
         assertEquals(PtcgRandomizerVersion.VERSION, loaded.get("appVersion"));
         assertFalse(loaded.get("seed").equals("random"));
+
+        @SuppressWarnings("unchecked")
+        List<Map<String, Object>> preScripts = (List<Map<String, Object>>) loaded.get("prescripts");
+        assertEquals(1, preScripts.size());
+        assertEquals("changedetector_setup", preScripts.get(0).get("module"));
+        assertEquals("0.1", preScripts.get(0).get("version"));
+
+        @SuppressWarnings("unchecked")
+        List<Map<String, Object>> postScripts =
+                (List<Map<String, Object>>) loaded.get("postscripts");
+        assertEquals(1, postScripts.size());
+        assertEquals("changedetector_detect", postScripts.get(0).get("module"));
     }
 
     @Test
     void saveWritesYamlFile() throws Exception {
-        Preset preset = new Preset("42", Collections.emptyList());
+        Preset preset = new Preset("42", Collections.emptyList(), List.of(), List.of());
         Path output = tempDir.resolve("preset.yaml");
         PresetIO.save(output.toFile(), preset);
 
@@ -95,6 +119,7 @@ class PresetIOTest {
                 new Yaml().load(yamlText.substring(yamlText.indexOf('\n') + 1));
         assertEquals("42", loaded.get("seed"));
         assertEquals(Collections.emptyList(), loaded.get("actions"));
+        assertEquals(Collections.emptyList(), loaded.get("prescripts"));
     }
 
     @Test
@@ -111,7 +136,15 @@ class PresetIOTest {
         ActionPreset actionPreset =
                 new ActionPreset("shuffle_hp", null, ModuleConfigPreset.empty());
         Map<String, Object> node = actionPreset.prepForSave();
-        assertEquals(ActionPreset.UNKNOWN_VERSION, node.get("version"));
+        assertEquals(ModulePreset.UNKNOWN_VERSION, node.get("version"));
+    }
+
+    @Test
+    void scriptPresetSavesModuleVersion() {
+        ScriptPreset scriptPreset = new ScriptPreset("changedetector_setup", "0.1");
+        Map<String, Object> node = scriptPreset.prepForSave();
+        assertEquals("changedetector_setup", node.get("module"));
+        assertEquals("0.1", node.get("version"));
     }
 
     @Test
@@ -125,6 +158,8 @@ class PresetIOTest {
                     version: 0.1
                     config:
                       seedOffset: 12
+                prescripts: []
+                postscripts: []
                 """.formatted(PtcgRandomizerVersion.VERSION);
         Path presetFile = tempDir.resolve("preset.yaml");
         Files.writeString(presetFile, yaml);
@@ -141,6 +176,32 @@ class PresetIOTest {
     }
 
     @Test
+    void loadRestoresScriptsWithoutLoadingThem() throws Exception {
+        String yaml = """
+                version: 1
+                appVersion: %s
+                seed: 1
+                actions: []
+                prescripts:
+                  - module: changedetector_setup
+                    version: 0.1
+                postscripts:
+                  - module: changedetector_detect
+                    version: 0.1
+                """.formatted(PtcgRandomizerVersion.VERSION);
+        Path presetFile = tempDir.resolve("preset.yaml");
+        Files.writeString(presetFile, yaml);
+
+        List<String> warnings = new ArrayList<>();
+        Preset preset = PresetIO.load(presetFile.toFile(), warnings);
+        assertTrue(warnings.isEmpty());
+        assertEquals(1, preset.getPreScriptPresets().size());
+        assertEquals("changedetector_setup", preset.getPreScriptPresets().get(0).getModule());
+        assertEquals(1, preset.getPostScriptPresets().size());
+        assertEquals("changedetector_detect", preset.getPostScriptPresets().get(0).getModule());
+    }
+
+    @Test
     void loadRestoresSeedActionsAndSeedOffsetWithoutModuleVersion() throws Exception {
         String yaml = """
                 version: 1
@@ -150,6 +211,8 @@ class PresetIOTest {
                   - module: shuffle_hp
                     config:
                       seedOffset: 12
+                prescripts: []
+                postscripts: []
                 """.formatted(PtcgRandomizerVersion.VERSION);
         Path presetFile = tempDir.resolve("preset.yaml");
         Files.writeString(presetFile, yaml);
@@ -167,9 +230,10 @@ class PresetIOTest {
     @Test
     void versionMismatchWarnsButStillLoadsAction() {
         Preset preset = new Preset("1",
-                List.of(new ActionPreset("shuffle_hp", "0.1", ModuleConfigPreset.empty())));
+                List.of(new ActionPreset("shuffle_hp", "0.1", ModuleConfigPreset.empty())),
+                List.of(), List.of());
 
-        ActionBank actionBank = testActionBank("shuffle_hp", "0.9");
+        ActionBank actionBank = testActionBank("shuffle_hp", "0.9", List.of(), List.of());
 
         List<String> warnings = new ArrayList<>();
         var actions = preset.getActions(actionBank, warnings);
@@ -181,12 +245,80 @@ class PresetIOTest {
     }
 
     @Test
+    void scriptVersionMismatchWarnsWithoutLoadingScripts() {
+        Preset preset = new Preset("1", List.of(),
+                List.of(new ScriptPreset("changedetector_setup", "0.0")),
+                List.of(new ScriptPreset("changedetector_detect", "0.0")));
+
+        ActionBank actionBank = testActionBank(null, null,
+                List.of(scriptWithVersion("changedetector_setup", "0.1", "randomize")),
+                List.of(scriptWithVersion("changedetector_detect", "0.2", "module")));
+
+        List<String> warnings = new ArrayList<>();
+        preset.checkScripts(actionBank, warnings);
+
+        assertTrue(warnings.stream().anyMatch(w -> w.contains("prescripts")
+                && w.contains("changedetector_setup") && w.contains("0.0")));
+        assertTrue(warnings.stream().anyMatch(w -> w.contains("postscripts")
+                && w.contains("changedetector_detect") && w.contains("0.2")));
+    }
+
+    @Test
+    void missingScriptInAppWarns() {
+        Preset preset = new Preset("1", List.of(),
+                List.of(new ScriptPreset("missing_prescript", "0.1")), List.of());
+
+        ActionBank actionBank = testActionBank(null, null, List.of(), List.of());
+
+        List<String> warnings = new ArrayList<>();
+        preset.checkScripts(actionBank, warnings);
+
+        assertTrue(warnings.stream()
+                .anyMatch(w -> w.contains("missing_prescript") && w.contains("not loaded")));
+    }
+
+    @Test
+    void extraScriptInAppWarns() {
+        Preset preset = new Preset("1", List.of(), List.of(), List.of());
+
+        ActionBank actionBank = testActionBank(null, null,
+                List.of(scriptWithVersion("changedetector_setup", "0.1", "randomize")), List.of());
+
+        List<String> warnings = new ArrayList<>();
+        preset.checkScripts(actionBank, warnings);
+
+        assertTrue(warnings.stream().anyMatch(
+                w -> w.contains("changedetector_setup") && w.contains("not in the preset")));
+    }
+
+    @Test
+    void loadWithoutScriptSectionsUsesEmptyScriptLists() throws Exception {
+        String yaml = """
+                version: 1
+                appVersion: %s
+                seed: 1
+                actions: []
+                """.formatted(PtcgRandomizerVersion.VERSION);
+        Path presetFile = tempDir.resolve("preset.yaml");
+        Files.writeString(presetFile, yaml);
+
+        List<String> warnings = new ArrayList<>();
+        Preset preset = PresetIO.load(presetFile.toFile(), warnings);
+
+        assertTrue(warnings.isEmpty());
+        assertTrue(preset.getPreScriptPresets().isEmpty());
+        assertTrue(preset.getPostScriptPresets().isEmpty());
+    }
+
+    @Test
     void appVersionMismatchWarnsOnLoad() throws Exception {
         String yaml = """
                 version: 1
                 appVersion: 0.1.0
                 seed: 1
                 actions: []
+                prescripts: []
+                postscripts: []
                 """;
         Path presetFile = tempDir.resolve("preset.yaml");
         Files.writeString(presetFile, yaml);
@@ -204,6 +336,8 @@ class PresetIOTest {
                 version: 1
                 seed: 42
                 actions: []
+                prescripts: []
+                postscripts: []
                 """;
         Path presetFile = tempDir.resolve("preset.yaml");
         Files.writeString(presetFile, yaml);
@@ -221,6 +355,8 @@ class PresetIOTest {
                 appVersion: %s
                 seed: 42
                 actions: []
+                prescripts: []
+                postscripts: []
                 """.formatted(PtcgRandomizerVersion.VERSION);
         Path presetFile = tempDir.resolve("preset.yaml");
         Files.writeString(presetFile, yaml);
@@ -234,9 +370,10 @@ class PresetIOTest {
     @Test
     void missingModuleVersionWarnsButStillLoadsAction() {
         Preset preset = new Preset("1",
-                List.of(new ActionPreset("shuffle_hp", null, ModuleConfigPreset.empty())));
+                List.of(new ActionPreset("shuffle_hp", null, ModuleConfigPreset.empty())),
+                List.of(), List.of());
 
-        ActionBank actionBank = testActionBank("shuffle_hp", "0.9");
+        ActionBank actionBank = testActionBank("shuffle_hp", "0.9", List.of(), List.of());
 
         List<String> warnings = new ArrayList<>();
         var actions = preset.getActions(actionBank, warnings);
@@ -248,12 +385,23 @@ class PresetIOTest {
     @Test
     void missingModulesAreSkippedWithWarning() {
         Preset preset = new Preset("1",
-                List.of(new ActionPreset("missing_module", null, ModuleConfigPreset.empty())));
+                List.of(new ActionPreset("missing_module", null, ModuleConfigPreset.empty())),
+                List.of(), List.of());
 
         ActionBank actionBank = new ActionBank(null) {
             @Override
-            public redactedrice.randomizer.lua.Module getModule(String moduleName) {
+            public Module getModule(String moduleName) {
                 return null;
+            }
+
+            @Override
+            public List<Module> getPreScripts() {
+                return List.of();
+            }
+
+            @Override
+            public List<Module> getPostScripts() {
+                return List.of();
             }
         };
 
@@ -265,24 +413,57 @@ class PresetIOTest {
         assertTrue(warnings.stream().anyMatch(w -> w.contains("skipped")));
     }
 
-    private static ActionBank testActionBank(String moduleName, String version) {
+    private static ActionBank testActionBank(String moduleName, String version,
+            List<Module> preScripts, List<Module> postScripts) {
         return new ActionBank(null) {
             @Override
-            public redactedrice.randomizer.lua.Module getModule(String name) {
-                return moduleName.equals(name) ? moduleWithVersion(name, version) : null;
+            public Module getModule(String name) {
+                if (moduleName != null && moduleName.equals(name)) {
+                    return moduleWithVersion(name, version);
+                }
+                for (Module script : preScripts) {
+                    if (script.getName().equals(name)) {
+                        return script;
+                    }
+                }
+                for (Module script : postScripts) {
+                    if (script.getName().equals(name)) {
+                        return script;
+                    }
+                }
+                return null;
+            }
+
+            @Override
+            public List<Module> getPreScripts() {
+                return preScripts;
+            }
+
+            @Override
+            public List<Module> getPostScripts() {
+                return postScripts;
             }
         };
     }
 
-    private static redactedrice.randomizer.lua.Module moduleWithVersion(String name,
-            String version) {
-        return new redactedrice.randomizer.lua.Module(name, "", java.util.Set.of("pokemon cards"),
-                java.util.Set.of(), java.util.List.of(), new org.luaj.vm2.lib.ZeroArgFunction() {
+    private static Module moduleWithVersion(String name, String version) {
+        return new Module(name, "", Set.of("pokemon cards"), Set.of(), List.of(),
+                new ZeroArgFunction() {
                     @Override
-                    public org.luaj.vm2.LuaValue call() {
-                        return org.luaj.vm2.LuaValue.NIL;
+                    public LuaValue call() {
+                        return LuaValue.NIL;
                     }
                 }, null, "test.lua", 0, true, true, null, "author", version,
-                java.util.Map.of("UniversalRandomizerJava", "0.5.0"), null, null, null);
+                Map.of("UniversalRandomizerJava", "0.5.0"), null, null, null);
+    }
+
+    private static Module scriptWithVersion(String name, String version, String when) {
+        return new Module(name, "", Set.of(), Set.of(), List.of(), new ZeroArgFunction() {
+            @Override
+            public LuaValue call() {
+                return LuaValue.NIL;
+            }
+        }, null, "test.lua", 0, false, false, when, "author", version,
+                Map.of("UniversalRandomizerJava", "0.5.0"), null, null, null);
     }
 }
